# Logger

./: CMakeLists.txt  CMakeLists.txt.in  LICENSE  README.md
include/: logger.h
src/: file_logger.cpp  imp_logger.cpp  imp_logger.h  logger_factory.cpp  std_logger.cpp
tests/: example_app.cpp  main.cpp  tests.cpp
